# discord.yaml

./: Cargo.toml  README.md
src/: config.rs  main.rs
